docs .yaml and logger
